Agregamos tests de integración (requieren un FTP server funcional en localhost que acepte el usuario "Test" y Password "Test" y que permita subir, eliminar y leer archivos y carpetas.
Se agrega una herramienta que es un servidor FTP para Windows, es una aplicacion DOS, se recomienda utilizar el archivo bat (runftpserver.bat) proporcionado para iniciar el servidor FTP estableciendo con la carpeta raiz en la carpeta de archivos temporales

--- a/FTPUtilTest.csproj
+++ b/FTPUtilTest.csproj
@@ -53,7 +53,7 @@
     <Compile Include="FakeDateTimeProvider.cs" />
     <Compile Include="myFTPFileInfoTest.cs" />
     <Compile Include="myFTPTest.cs" />
-    <Compile Include="UnitTest1.cs" />
+    <Compile Include="myFTPIntegrationTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -61,6 +61,12 @@
       <Project>{8aea853c-61c5-4928-bf67-41743d176bf8}</Project>
       <Name>FTPUtil</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="tools\ftpdmin.exe" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="tools\runftpserver.bat" />
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
